# py-cari-ayat

./: .gitignore  README.md  config.py  config.yaml  pyproject.toml  requirements.txt
py_cari_ayat/: __init__.py
py_cari_ayat/ayat/: __init__.py  cosine_similarity.py  routes.py
py_cari_ayat/home/: __init__.py  routes.py
py_cari_ayat/models/: ayat.py  kata.py  surat.py
py_cari_ayat/static/styles/: datatables-theme.css  datatables.buttons.css  datatables.css  style.css
py_cari_ayat/surat/: __init__.py  routes.py
py_cari_ayat/templates/: home.html  home.html.j2
py_cari_ayat/templates/ayat/: ayat.html.j2  query.html  query.html.j2
py_cari_ayat/templates/layout/: footer.html  footer.html.j2  layout.html.j2  navbar.html  navbar.html.j2
py_cari_ayat/templates/surat/: surat.html  surat.html.j2  surats.html  surats.html.j2
